# kube-boy

./: README.md  main.py  pyproject.toml
chats/: architecture.txt
kube_boy/: agent.py  cli.py  k8s_client.py  tools.py
